wk_taa_taaqa/src/objects/Account_X_Reference__c.object
<CustomObject>
    <fields>
        <fullName>AC_Usage_data_records__c</fullName>
        <label>AC Usage data records</label>
        <summaryFilterItems>
            <field>External_Data__c.Source__c</field>
            <operation>equals</operation>
            <value>BI Answer Connect User Usage</value>
        </summaryFilterItems>
        <summaryForeignKey>External_Data__c.Account_X_Reference__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AMS_Account_Grouping__c</fullName>
        <label>AMS Account Grouping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Acct_Grouping__c</fullName>
        <formula>CASE(AMS_Account_Grouping__c ,&quot;0&quot;,&quot;Non-OFX User&quot;,&quot;2&quot;,&quot;WAN&quot;,&quot;5&quot;,&quot;New OFX Account&quot;,&quot;6&quot;,&quot;OFX Account&quot;,&quot;7&quot;,&quot;PUP&quot;,&quot;8&quot;,&quot;LIB&quot;,&quot;4&quot;,&quot;PUP WAN&quot;,&quot;3&quot;,&quot;LIB WAN&quot;,&quot;9&quot;,&quot;1040 Conversion&quot;,&quot;A&quot;,&quot;Corp Tax Lib&quot;,&quot;B&quot;,&quot;Universities&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Acct Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Cons_Code__c</fullName>
        <formula>IF( AMS_Consolidation_Code__c =&quot;028&quot;,&quot;McGladrey&quot;,IF(AMS_Consolidation_Code__c = &quot;043&quot;,&quot;BDO&quot;,IF(AMS_Consolidation_Code__c = &quot;730&quot;,&quot;McGladrey&quot;,IF(AMS_Consolidation_Code__c =&quot;200&quot;,&quot;Canadian&quot;,IF(AMS_Consolidation_Code__c =&quot;201&quot;,&quot;Canadian&quot;,IF(AMS_Consolidation_Code__c =&quot;202&quot;,&quot;Canadian&quot;,IF(AMS_Consolidation_Code__c =&quot;204&quot;,&quot;Canadian&quot;,AMS_Consolidation_Code__c)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Cons Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Consolidation_Code__c</fullName>
        <label>AMS Consolidation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Credit_Code__c</fullName>
        <label>AMS Credit Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Internal_Account_Flag__c</fullName>
        <label>AMS Internal Account Flag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_New_Renew_Code_Formula__c</fullName>
        <formula>CASE(AMS_New_Renew_Code__c ,&quot;1&quot;,&quot;New Account&quot;,&quot;2&quot;,&quot;Renewed&quot;,&quot;3&quot;,&quot;Renewed&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS New-Renew Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_New_Renew_Code__c</fullName>
        <label>AMS New Renew Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Date_2015__c</fullName>
        <label>AMS Renewal Date 2015</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Date_2016__c</fullName>
        <label>AMS Renewal Date 2016</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Email__c</fullName>
        <label>AMS Renewal Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Status_2014__c</fullName>
        <label>AMS Renewal Status 2014</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Status_2015__c</fullName>
        <label>AMS Renewal Status 2015</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Special_Agreement_Formula__c</fullName>
        <formula>CASE( AMS_Special_Agreement__c ,&quot;Y&quot;, &quot;Corp Suite - Cal&quot;, &quot;Z&quot;,&quot;Corp Suite - FY&quot;,&quot;C&quot;, &quot;Corporate Filer&quot;, &quot;M&quot;, &quot;Multi_Site Main&quot;, &quot;N&quot;, &quot;Multi-Site Sub&quot;, &quot;R&quot;, &quot;RFX(OFXII Remote)&quot;, &quot;S&quot;, &quot;SFX&quot;, &quot;A&quot;, &quot;Standalone Accuplanner&quot;, &quot;V&quot;, &quot;Standalone Auditvision&quot;, &quot;L&quot;,&quot;Sub License&quot;, &quot;W&quot;, &quot;WAN Main&quot;, &quot;X&quot;, &quot;WAN Satellite&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Special Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Special_Agreement__c</fullName>
        <label>AMS Special Agreement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Status_Formula__c</fullName>
        <formula>CASE(AMS_Status__c,&quot;8&quot;,&quot;Renewed 2017&quot;, &quot;7&quot;,&quot;Renewed 2016&quot;, &quot;6&quot;, &quot;Renewed 2015&quot;, &quot;5&quot;, &quot;Renewed 2014&quot;,&quot;4&quot;, &quot;Renewed 2013&quot;, &quot;3&quot;, &quot;Renewed 2012&quot;, &quot;C&quot;, &quot;Cancelled&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Status__c</fullName>
        <label>AMS Status</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_renewal_Contact__c</fullName>
        <label>AMS renewal Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_renewal_Date_2014__c</fullName>
        <label>AMS renewal Date 2014</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>All-link</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Not IntelliConnect Eligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Cut_Off_Cut_On_Date__c</fullName>
        <label>Account Cut Off / Cut On Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_ID_18_digit__c</fullName>
        <formula>CASESAFEID( Account__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID 18-digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Outstanding_Balance__c</fullName>
        <label>Account Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Non Renewed</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>Renewal Customer</fullName>
                </value>
                <value>
                    <fullName>RT Prospect</fullName>
                </value>
                <value>
                    <fullName>EZ Prospect</fullName>
                </value>
                <value>
                    <fullName>Lost Customer</fullName>
                </value>
                <value>
                    <fullName>Lost Prospect</fullName>
                </value>
                <value>
                    <fullName>Internal Refunds Today</fullName>
                </value>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>2013 Prospect</fullName>
                </value>
                <value>
                    <fullName>2014 Prospect</fullName>
                </value>
                <value>
                    <fullName>2015 Prospect</fullName>
                </value>
                <value>
                    <fullName>2016 Prospect</fullName>
                </value>
                <value>
                    <fullName>Prior Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account X-Reference</relationshipLabel>
        <relationshipName>Account_X_Reference</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ApplicationID__c</fullName>
        <externalId>true</externalId>
        <label>Application ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>SFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authentication_Type__c</fullName>
        <label>Authentication_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autoflow_Downloaded__c</fullName>
        <formula>Account__r.Autoflow_Downloaded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Autoflow Downloaded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autoflow_Purchased__c</fullName>
        <formula>Account__r.Autoflow_Purchased__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Autoflow Purchased</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autoflow_Remaining__c</fullName>
        <formula>Account__r.Autoflow_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Autoflow Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account_Name__c</fullName>
        <label>Bill To Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Name__c</fullName>
        <label>Bill To Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Fax__c</fullName>
        <label>Bill_To_Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_To_Partner_Number__c</fullName>
        <label>Bill_To_Partner_Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Phone__c</fullName>
        <label>Bill_To_Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street_Line_1__c</fullName>
        <label>Bill To Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street_Line_2__c</fullName>
        <label>Bill To Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip_Postal_Code__c</fullName>
        <label>Bill To Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Number__c</fullName>
        <description>SAP Sold To Building Number</description>
        <label>Building Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_SW_12_31_Renewal_Value__c</fullName>
        <label>Corp SW 12/31 Renewal Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Support_History__c</fullName>
        <formula>HYPERLINK(&quot;https://support.cch.com/ticket/tickets.aspx?accountNumber=&quot;&amp;ApplicationID__c, &quot;View Support History&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Support History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cutoff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cutoff?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFIN__c</fullName>
        <label>EFIN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Account_Name__c</fullName>
        <label>ERP Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electronic_Filer__c</fullName>
        <formula>OR(X2016_State_Specialty_Ext_Count__c&gt;0,
 X2016_State_Specialty_ELF_Count__c &gt;0,
X2016_Federal_Specialty_Ext_Count__c&gt;0,
X2016_Federal_Specialty_ELF_Count__c&gt;0,
X2016_Business_Federal_Ext_Count__c&gt;0,
X2016_Business_Federal_ELF_Count__c&gt;0, 
X2016_Business_State_Ext_Count__c&gt;0,
X2016_Business_State_ELF_Count__c&gt;0,
 X2016_Individual_Federal_Ext_Count__c &gt;0,
X2016_Individual_Federal_ELF_Count__c&gt;0,
X2016_Individual_State_ELF_Count__c&gt;0,
X2016_Individual_State_Ext_Count__c&gt;0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electronic Filer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_45_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement 45% Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Status_Reason__c</fullName>
        <label>Financial Status Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Status__c</fullName>
        <label>Financial Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active - CC</fullName>
                </value>
                <value>
                    <fullName>Inactive - CL</fullName>
                </value>
                <value>
                    <fullName>Inactive - AH</fullName>
                </value>
                <value>
                    <fullName>Inactive - CN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Axcess_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Axcess Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_GFX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has GFX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Knowledge_Coach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Knowledge Coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PFX_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PFX Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IC_Contact_Email__c</fullName>
        <label>IC Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IC_Contact_First_Name__c</fullName>
        <label>IC Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_Contact_Last_Name__c</fullName>
        <label>IC Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_Contact_Phone__c</fullName>
        <label>IC Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IC_Usage_Data_Records__c</fullName>
        <label>IC Usage Data Records</label>
        <summaryFilterItems>
            <field>External_Data__c.Source__c</field>
            <operation>equals</operation>
            <value>IntelliConnect Usage</value>
        </summaryFilterItems>
        <summaryForeignKey>External_Data__c.Account_X_Reference__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IDs_Issued__c</fullName>
        <label>IDs_Issued</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Prompt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP_Prompt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNotValid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>record modified today but not eligible in batch process to update account</description>
        <label>IsNotValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Strategic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Strategic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Coach_45_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knowledge Coach 45% Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning_Center_Max_Date__c</fullName>
        <label>Learning Center Max Date</label>
        <summarizedField>External_Data__c.Subscription_Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>External_Data__c.Source__c</field>
            <operation>equals</operation>
            <value>Learning Center</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>External_Data__c.Subscription_Type__c</field>
            <operation>equals</operation>
            <value>Hours</value>
        </summaryFilterItems>
        <summaryForeignKey>External_Data__c.Account_X_Reference__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legacy_Application_ID__c</fullName>
        <inlineHelpText>Legacy ERP number if a customer is migrated to another ERP. Alternate ERP number, if a customer exists in multiple ERPs.</inlineHelpText>
        <label>Legacy/Alternate Application ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_IDs_Allowed__c</fullName>
        <label>Max_IDs_Allowed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MyAccount_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://support.cch.com/inventory/protected/default.aspx?acct=&quot;&amp;ApplicationID__c, &quot;View Inventory&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MyAccount Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Account_Type__c</fullName>
        <formula>text( Account__r.Named_Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Named Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <formula>Account__r.Named_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Authentication_Type__c</fullName>
        <label>Authentication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>Refer</fullName>
                </value>
                <value>
                    <fullName>Standard+IP</fullName>
                </value>
                <value>
                    <fullName>Standard+Refer</fullName>
                </value>
                <value>
                    <fullName>IP+Refer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_IDs_Issued__c</fullName>
        <label>IDs Issued</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Max_IDs_Allowed__c</fullName>
        <label>Max IDs Allowed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Addresses__c</fullName>
        <formula>AND(ISBLANK( Bill_To_Street_Line_1__c )=TRUE,ISBLANK( Bill_To_Street_Line_2__c )=TRUE,ISBLANK( Ship_To_Street_Line_1__c )=TRUE,ISBLANK( Ship_To_Street_Line_2__c )=TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Out_of_Base_Date_2015__c</fullName>
        <label>Out of Base Date 2015</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Base_Date_2016__c</fullName>
        <label>Out of Base Date 2016</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFX_Email_Address__c</fullName>
        <label>PFX Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Expiration_Year__c</fullName>
        <label>PL Expiration Year</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Account__c</fullName>
        <formula>Account__r.Potential_Strategic__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PS Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pfx_Engagement_45_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pfx Engagement 45% Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pfx_Knowledge_Coach_45_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pfx Knowledge Coach 45% Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_DTN__c</fullName>
        <formula>Account__r.SW_ASR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RC DTN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Contact__c</fullName>
        <label>Renewal Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_IC_Trial_Account_Number__c</fullName>
        <label>IC Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_Number__c</fullName>
        <formula>Account__r.SFDC_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Acct_No__c</fullName>
        <formula>Account__r.SFDC_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Acct No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Account_Balance__c</fullName>
        <label>SFS Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFS_Account_Link__c</fullName>
        <description>Used to take the user to this account in the SFS instance of SFDC.</description>
        <formula>IF( SFS_Account_Record_ID__c =&quot;&quot;,&quot;&quot;,
HYPERLINK(&quot;https://wksfs--uat.cs94.my.salesforce.com/&quot;+  SFS_Account_Record_ID__c , &quot;View SFS Account&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFS Account Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Account_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFS Account Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Office_Number__c</fullName>
        <label>SFS Office Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_PID__c</fullName>
        <label>SFS PID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Prior_Year_Renewal_Date__c</fullName>
        <label>SFS Prior Year Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SW_Product_Platform__c</fullName>
        <formula>IF( X2016_Axcess_Renewal__c = TRUE, &quot;Axcess&quot;,
 IF( X2016_PFX_Renewal__c = TRUE, &quot;PFX&quot;,
  IF( X2016_GFX_Renewal__c = TRUE, &quot;GFX&quot;, NULL
)
)
)</formula>
        <label>Software Product Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>TEXT(Account__r.Market_Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account_Name__c</fullName>
        <label>Ship To Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Name__c</fullName>
        <label>Ship To Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Fax__c</fullName>
        <label>Ship_To_Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To_Partner_Number__c</fullName>
        <label>Ship_To_Partner_Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Phone__c</fullName>
        <label>Ship_To_Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_Line_1__c</fullName>
        <label>Ship To Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_Line_2__c</fullName>
        <label>Ship To Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip_Postal_Code__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standing_Order__c</fullName>
        <formula>HYPERLINK(&quot;https://support.cch.com/standingorders/protected/default.aspx?acct=&quot;&amp;ApplicationID__c, &quot;View Standing Orders&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standing Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street_Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubSegment__c</fullName>
        <formula>TEXT(Account__r.Market_Sub_Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubSegment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Solution_Package_Name__c</fullName>
        <label>Tax Solution Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_2017_Software_Revenue__c</fullName>
        <formula>X2017_Active_Data_Total__c + X2017_Axcess_Document_Total__c + X2017_Axcess_Practice_Total__c + X2017_Axcess_Tax_Total__c + X2017_Axcess_Workstream_Total__c + X2017_Document_OP_Total__c + X2017_Document_Total__c+ X2017_ELF_Total__c+ X2017_Engagement_Total__c+ X2017_Fixed_Assets_Total__c + X2017_Globalfx_Total__c + X2017_KCN_OP_Total__c + X2017_KCN_SaaS_Total__c+ X2017_KCN_SaaS_Total__c + X2017_Knowledge_Coach_Total__c + X2017_Knowledge_Tools_Total__c + X2017_Org_PF_Total__c + X2017_Outsource_Total__c + X2017_Portal_Total__c + X2017_Practice_Management_Total__c+ X2017_Practice_Total__c + X2017_Scan_SaaS_Total__c + X2017_Scan_Total__c + X2017_Tax_Total__c + X2017_Trial_Balance_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total 2017 Software Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X18_Characted_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Characted ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2012_PL_Contract_Amount__c</fullName>
        <label>2012 PL Contract Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2012_PL_Rate__c</fullName>
        <label>2012 PL Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2012_PL_Return_Count__c</fullName>
        <label>2012 PL Return Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2013_PL_Contract_Amount__c</fullName>
        <label>2013 PL Contract Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_PL_Rate__c</fullName>
        <label>2013 PL Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2013_PL_Return_Count__c</fullName>
        <label>2013 PL Return Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2014_AMS_Additional_Discount__c</fullName>
        <label>2014 AMS Additional Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>